syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "io.github.tonnyl.moka.proto";
option java_multiple_files = true;

message ContributionCalendar {
  repeated string colors = 1;
  bool is_halloween = 2;
  repeated ContributionCalendarMonth months = 3;
  int32 total_contributions = 4;
  repeated ContributionCalendarWeek weeks = 5;
}

message ContributionCalendarMonth {
  google.protobuf.Timestamp first_day = 1;
  string name = 2;
  int32 total_weeks = 3;
  int32 year = 4;
}

message ContributionCalendarDay {
  string color = 1;
  int32 contribution_count = 2;
  string contribution_level = 3;
  google.protobuf.Timestamp date = 4;
  int32 weekday = 5;
}

message ContributionCalendarWeek {
  repeated ContributionCalendarDay contribution_days = 1;
  google.protobuf.Timestamp first_day = 2;
}